--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@ body{
   .card{
     font-family: "Candara", sans-serif;
     width: 500px;
+    width: 100%
     height: auto;
     overflow: hidden;
     background: #fff;
@@ -100,7 +101,7 @@ body{
   @media (max-width: 768px) {
     .card {
       width: 95%;
-      max-width: fit-content;
+      max-width: none;
       height: auto;
     }
   
