--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@ body{
   .card{
     font-family: "Candara", sans-serif;
     width: 500px;
-    width: 100%
+    width: 100%;
     height: auto;
     overflow: hidden;
     background: #fff;
