--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,8 +10,8 @@ body{
   
   .card{
     font-family: "Candara", sans-serif;
-    width: 500px;
     width: 100%;
+    max-width: 500px;
     height: auto;
     overflow: hidden;
     background: #fff;
@@ -100,7 +100,7 @@ body{
   
   @media (max-width: 768px) {
     .card {
-      width: 95%;
+      width: 80%;
       max-width: none;
       height: auto;
     }
